# psc

./: .gitignore  CMakeLists.txt
src/: main.cpp  syntax.txt
